[package]
name = "libnx-rs-template"
version = "0.0.5"
authors = ["scheinkman.ilan@gmail.com"]

[[bin]]
name = "libnxbin"
path = "src/lib.rs"
debug = true
lto = false
opt-level = 0

[profile.dev]
panic = "unwind"
lto = false
debug = true
opt-level = 0

[profile.test]
panic = "unwind"
lto = false
debug = true
opt-level = 0

[profile.release]
panic = "unwind"
lto = false
debug = true
opt-level = 0

[dependencies.libnx-rs]
git = "https://github.com/ischeinkman/libnx-rs"

[dependencies.libc]
version = "0.2"

[dependencies.rand]
version = "0.5"

[dependencies.piston]
version = "0.37"

[dependencies.pistoncore-input]
version = "0.21.0"

[dependencies.piston2d-graphics]
version = "0.26"

[dependencies.image]
version = "0.19"

[dependencies.rusttype]
version = "0.5"

[dependencies.pistoncore-libnx-rs_window]
git = "https://github.com/ischeinkman/libnx-rs_window"

[dependencies.piston_window]
version = "^0.82.0"
default-features = false


[dependencies.conrod]
features = ["piston"] 
version = "0.61.1"

[replace]
"num_cpus:1.8.0" = { git = 'https://github.com/kloumpt/num_cpus/', branch = 'nintendo-3ds-horizon' }

[features]
default-features = ["conrod-test"]
conrod-test = []